--- a/src/planner/operator/CMakeLists.txt
+++ b/src/planner/operator/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library_unity(
   logical_sample.cpp
   logical_unnest.cpp
   logical_window.cpp
+  logical_shared_hash_join.cpp
   logical_distinct.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_planner_operator>
